[build-system]
requires = ["setuptools>=63.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dojo_exporter"
version = "0.1.0"
description = "Devops monitoring tool for Samourai Dojo"
readme = "README.md"
authors = [{ name = "blee", email = "blee@bitcoiner.social" }]
license = { file = "LICENSE" }
keywords = ["samourai"]
dependencies = [
    'build>="0.8.0"',
    'twine>="4.0.1"',
    'prometheus_client>="0.15.0"',
    'bitmath>="1.3.3.1"',
]
requires-python = ">=3.8.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: Apache Software License",    
]

[project.urls]
Homepage = "https://github.com/bleebl33/dojo_exporter"

# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
dojo_exporter = "dojo_exporter:main"